name:                SpaceSim
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
license-file:        LICENSE
author:              uwap
maintainer:          me@uwap.name
-- copyright:           
category:            Game
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable SpaceSim
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >= 4 && < 5,
                       -- opengl and rendering
                       sdl2 >= 2 && < 3, OpenGL >= 2 && < 3,
                       GLUtil >= 0.8 && < 0.9,
                       -- lenses and libs depending on lenses
                       lens >= 4 && < 5, linear >= 1.20 && < 2,
                       -- util
                       text >= 1.2.1 && < 1.5, filepath >= 1.4 && < 2.0,
                       random >= 1.1 && < 1.5, containers >= 0.5.6 && < 0.6.0,
                       transformers >= 0.3 && < 0.5, mtl >= 2 && < 3
  hs-source-dirs:      src
  default-language:    Haskell2010
